[project]
name = "rpi_remote_server"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "Flask==3.0.3",
    "requests==2.31.0",
    "gunicorn==22.0.0",
    "SQLAlchemy==2.0.23",
    "Flask-SocketIO==5.3.6",
    "eventlet==0.36.1",
    "bcrypt==4.1.2",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
  "pylint==3.0.2",
]