[project]
name = "rpi_remote_server"
version = "0.2.0"
readme = "README.md"
dependencies = [
    "Flask~=3.0",
    "Flask-SocketIO~=5.3",
    "SQLAlchemy~=2.0",
    "gunicorn[eventlet]~=22.0",
    "requests~=2.32",
    "bcrypt~=4.1",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
  "pylint~=3.0",
]
