[project]
name = "rpi_remote_server"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "Flask==3.0.0",
    "paramiko==2.12.0",
    "requests==2.28.1",
    "gunicorn==20.1.0",
    "SQLAlchemy==1.4.44",
    "UPnPy==1.1.8",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
  "pylint==3.0.2",
]